--- a/index.html
+++ b/index.html
@@ -101,11 +101,9 @@
           <div class="p-10">
             <div class="absolute inset-0 bg-gradient-to-br from-purple-500/10 to-cyan-500/10 rounded-lg"></div>
             <p class="text-xl text-gray-100 leading-relaxed text-center relative z-10">
-              As a passionate Computer Science & Engineering graduate, I am actively seeking an entry-level IT role
-              where I can contribute my technical skills and fresh perspective. I have a natural inclination towards
-              leadership and excel at project optimization, always striving to find innovative solutions to complex
-              problems. I believe in the power of knowledge sharing and collaborative teamwork to drive success and
-              create meaningful impact in the technology industry.
+              As a recent CSE graduate, I am passionate about leveraging technology, including artificial intelligence (AI) and machine learning (ML), 
+              to create impactful solutions for real-world challenges. Proficient in Python, Java, C, and frontend technologies like HTML, CSS, 
+              and JavaScript, I bring a balanced skill set combining problem-solving and creativity
             </p>
           </div>
         </div>
