--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="p-10">
             <div class="absolute inset-0 bg-gradient-to-br from-purple-500/10 to-cyan-500/10 rounded-lg"></div>
             <p class="text-xl text-gray-100 leading-relaxed text-center relative z-10">
-              As a recent CSE graduate, I am passionate about leveraging technology, including artificial intelligence (AI) and machine learning (ML), 
+              As a CSE graduate, I am passionate about leveraging technology, including artificial intelligence (AI) and machine learning (ML), 
               to create impactful solutions for real-world challenges. Proficient in Python, Java, C, and frontend technologies like HTML, CSS, 
               and JavaScript, I bring a balanced skill set combining problem-solving and creativity
             </p>
