--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <footer class="py-12 px-4 bg-gray-900/80 backdrop-blur-xl border-t border-gray-800 relative">
       <div class="max-w-6xl mx-auto text-center relative z-10">
         <p class="text-gray-400 text-lg">
-          © 2024 Safiqua Naaz. Built with Next.js, Tailwind CSS, and lots of
+          © Safiqua Naaz
           <span class="text-red-400 animate-pulse">❤️</span>
         </p>
         <div class="flex justify-center space-x-6 mt-4">
